# conan-mcp

./: README.md  main.py  pyproject.toml
.github/workflows/: test.yml
conan_mcp/: main.py
test/: test_conan_list.py  test_conan_mcp.py  test_install_conan_packages.py  test_run_command.py  test_tools_audit.py  test_tools_check_licenses.py  test_tools_conan_new.py  test_tools_create_conan_project.py  test_tools_install.py  test_tools_list.py  test_tools_profiles.py
