[project]
name = "conan-mcp"
version = "0.1.0"
description = "MCP server for Conan package manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.16.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
conan-mcp = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
